--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <span class="bg__blur"></span>
         <span class="bg__blur header__blur"></span>
         <h4>เว็บห้องเรียนออนไลน์ของผม</h4>
-        <h1><span>MAKE</span>คอร์ดเรียนออนไลน์ของผม</h1>
+        <h1><span>MAKE</span>คอร์สเรียนออนไลน์ของผม</h1>
         <p style="font-size: 20px;">
-          เรียนรู้ความสามารถภายในห้องได้คอร์ดเรียนของ Kitsakorn DEV ได้ที่นี้
+          เรียนรู้ความสามารถภายในห้องได้คอร์สเรียนของ Kitsakorn DEV ได้ที่นี้
         </p>
         <button class="btn">เริ่มเรียน</button>
       </div>
@@ -42,7 +42,7 @@
 
     <section class="section__container explore__container fade-in">
         <div class="explore__header" id="classroom">
-          <h2 class="section__header">คอร์ดเรียนออนไลน์</h2>
+          <h2 class="section__header">คอร์สเรียนออนไลน์</h2>
           <div class="explore__nav">
            
           </div>
@@ -60,7 +60,7 @@
             <span><i class="ri-css3-fill"></i></span>
             <h4>คอร์ดเรียน ภาษา Css</h4>
             <p>
-               เน้นพื้นฐานให้กับคุณด้วยภาษา Css เพื่อตกแต่งให้กับคุณโดยในคอร์ดจะมีสอนการใช้ flexbox การใช้ grid item เพียงราคา 1,000 ฿ สนใจสมัครเพียงกดคลิก
+               เน้นพื้นฐานให้กับคุณด้วยภาษา Css เพื่อตกแต่งให้กับคุณโดยในคอร์สจะมีสอนการใช้ flexbox การใช้ grid item เพียงราคา 1,000 ฿ สนใจสมัครเพียงกดคลิก
             </p>
             <a href="#">ชื้อเลย <i class="ri-shopping-cart-2-fill"></i></a>
           </div>
@@ -68,7 +68,7 @@
             <span><i class="ri-javascript-fill"></i></span>
             <h4>คอร์ดเรียนภาษา Java Script</h4>
             <p>
-              โดยในคอร์ดเราสอนการใช้ Object ต่างๆภายในคอร์ดและการใช้ function เพียงในราคา 800 ฿ สนใจสมัครเพียงกดคลิก
+              โดยในคอร์ดเราสอนการใช้ Object ต่างๆภายในคอร์สและการใช้ function เพียงในราคา 800 ฿ สนใจสมัครเพียงกดคลิก
             </p>
             <a href="#">ชื้อเลย<i class="ri-shopping-cart-2-fill"></i></a>
           </div>
@@ -135,14 +135,14 @@
 
 
       <section class="section__container price__container fade-in">
-        <h2 id="Prome" class="section__header">โปรโมชั่นคอร์ดเรียน</h2>
+        <h2 id="Prome" class="section__header">โปรโมชั่นคอร์สเรียน</h2>
         <p class="section__subheader">
           โปรโมชั่นรายเดือนนี้คือ
         </p>
         <div class="price__grid">
           <div class="price__card">
             <div class="price__card__content">
-              <h4>คอร์ดเรียนรายสัปดาห์</h4>
+              <h4>คอร์สเรียนรายสัปดาห์</h4>
               <h3>฿ 150</h3>
               <p>
                 <i class="ri-checkbox-circle-line"></i>
@@ -157,7 +157,7 @@
           </div>
           <div class="price__card">
             <div class="price__card__content">
-              <h4>คอร์ดเรียนรายเดือน</h4>
+              <h4>คอร์สเรียนรายเดือน</h4>
               <h3>฿ 500</h3>
               <p>
                 <i class="ri-checkbox-circle-line"></i>
@@ -176,7 +176,7 @@
           </div>
           <div class="price__card fade-in">
             <div class="price__card__content">
-              <h4>คอร์ดเรียนรายปี</h4>
+              <h4>คอร์สเรียนรายปี</h4>
               <h3>฿ 1,500</h3>
               <p>
                 <i class="ri-checkbox-circle-line"></i>
