--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="explore__grid fade-in">
           <div class="explore__card">
             <span><i class="ri-html5-fill"></i></span>
-            <h4>คอร์ดเรียน Css HTML</h4>
+            <h4>คอร์สเรียน Css HTML</h4>
             <p>
                 สอนพื้นฐานภาษา HTML และ Css จนคุณบรรลุธรรมเลย ในเพียงราคา 1,000 ฿ สนใจสมัครเพียงกดคลิก
             </p>
@@ -58,7 +58,7 @@
           </div>
           <div class="explore__card">
             <span><i class="ri-css3-fill"></i></span>
-            <h4>คอร์ดเรียน ภาษา Css</h4>
+            <h4>คอร์สเรียน ภาษา Css</h4>
             <p>
                เน้นพื้นฐานให้กับคุณด้วยภาษา Css เพื่อตกแต่งให้กับคุณโดยในคอร์สจะมีสอนการใช้ flexbox การใช้ grid item เพียงราคา 1,000 ฿ สนใจสมัครเพียงกดคลิก
             </p>
@@ -66,15 +66,15 @@
           </div>
           <div class="explore__card">
             <span><i class="ri-javascript-fill"></i></span>
-            <h4>คอร์ดเรียนภาษา Java Script</h4>
+            <h4>คอร์สเรียนภาษา Java Script</h4>
             <p>
-              โดยในคอร์ดเราสอนการใช้ Object ต่างๆภายในคอร์สและการใช้ function เพียงในราคา 800 ฿ สนใจสมัครเพียงกดคลิก
+              โดยในคอร์สเราสอนการใช้ Object ต่างๆภายในคอร์สและการใช้ function เพียงในราคา 800 ฿ สนใจสมัครเพียงกดคลิก
             </p>
             <a href="#">ชื้อเลย<i class="ri-shopping-cart-2-fill"></i></a>
           </div>
           <div class="explore__card">
             <span><i class="ri-image-edit-line"></i></span>
-            <h4>คอร์ดเรียนการใช้ Photoshop</h4>
+            <h4>คอร์สเรียนการใช้ Photoshop</h4>
             <p>
               ปูพื้นฐานการออกแบบเว็บไซต์ให้กับคุณโดยใช้ PhotoShop สอนจากไม่เป็นจนมีพื้นฐานเพียงในราคาไม่กี่บาท 1000 ฿
             </p>
@@ -180,7 +180,7 @@
               <h3>฿ 1,500</h3>
               <p>
                 <i class="ri-checkbox-circle-line"></i>
-                คอร์ดเหมารวมสอนจนเป็น FrontEnd Developer
+                คอร์สเหมารวมสอนจนเป็น FrontEnd Developer
               </p>
               <p>
                 <i class="ri-checkbox-circle-line"></i>
